fixed height for card images so they dont scroll on smaller devices

--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -86,8 +86,8 @@ mat-card-actions {
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 480px;
   user-select: none;
 }
 
